finally bug resolved i.e no gap between likeCount and Like button

--- a/project.css
+++ b/project.css
@@ -330,6 +330,7 @@ body::-webkit-scrollbar {
     /* background-color: red; */
     /* width: 100%; */
     .left_wala{
+        position: relative;
         /* border: 2px solid white; */
         border-top: 0px;
         /* background-color: green; */
@@ -1007,7 +1008,7 @@ body::-webkit-scrollbar {
     border-radius: 10px;
     margin: 10px;
     padding-left: 20px;
-    padding-right: 10px;
+    padding-right: 30px;
     
 }
 .interaction-buttons button:nth-child(1):hover{
@@ -1134,4 +1135,16 @@ body::-webkit-scrollbar {
             /* width: 200px; */
         }
     }
+}
+
+/* @media only screen and (max-width:780px){
+    .left_wala{
+        left: -250px;
+    }
+} */
+
+/* .interaction-buttons {
+    display: inline-block; /* This ensures that the buttons and like count are on the same line */
+.bt2 .like-count{
+    margin-left: -5px;
 }
